@@ -40,6 +40,7 @@ Packetfence supports the following access points:
 - Cisco 1130AG
 - Cisco 1240AG
 - Cisco 1250
+- Cisco Aironet in WDS mode
 - Dlink DWL Access Points
 - HP ProCurve
 - Xirrus WiFi Arrays
@@ -87,6 +88,8 @@ Aruba                        |    xx    |    --    |    XX    |
 Avaya WC                     |    --    |    XX    |    --    |
 -----------------------------|----------|----------|----------|
 Cisco Aironet                |    XX    |    --    |    --    |
+-----------------------------|----------|----------|----------|
+Cisco Aironet (WDS)          |    --    |    --    |    XX    |
 -----------------------------|----------|----------|----------|
 Cisco WiSM                   |    --    |    xx    |    XX    |
 -----------------------------|----------|----------|----------|
